[package]
name = "dialogue_graph"
version = "0.1.0"
authors = ["Eleonóra Alíz Takács <EllieTakacs@protonmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"

[dependencies.serde]
version = "^1.0.104"
features = ["derive"]

[dependencies.petgraph]
version = "^0.5.0"
default-features = false
features = ["serde-1"]
