[package]
name = "dialogue_graph"
version = "0.1.0"
authors = ["Eleonóra Alíz Takács <EllieTakacs@protonmail.com>"]
license = "MIT OR Apache-2.0"
description = "A serializable dialogue graph with conditional edges"
keywords = ["gamedev", "dialogue"]
categories = ["game-development"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/EllieTakacs/Dialogue-Graph"

[dependencies]
rand = "0.7.3"

[dependencies.serde]
version = "^1.0.104"
features = ["derive"]

[dependencies.petgraph]
version = "^0.5.0"
default-features = false
features = ["serde-1"]

[dev-dependencies]
serde_test = "^1.0.104"
serde_closure = "^0.2.10"
